frontend/src/style/sass/cards.sass
@import ./variables.sass


.deck-preview
    transition: 0.3s
    border: 1px solid $border-color

    &:hover
        cursor: pointer

    .deck-name
        font-size: $h3-size
        color: $text-color
        text-align: center
        transition: 0.3s
        display: flex
        justify-content: center
        align-items: center


    p 
        margin: 10px
    

